--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,11 +1,11 @@
 <script src="{{ "/scripts/jquery.min.js" | relURL }}" data-no-instant></script>
-<script async src="{{ "/scripts/fancybox/jquery.fancybox.min.js" | relURL }}"></script>
+<script src="{{ "/scripts/fancybox/jquery.fancybox.min.js" | relURL }}" async></script>
 
-<script async src="{{ "/scripts/jquery.onionskin.js" | relURL }}"></script>
+<script src="{{ "/scripts/jquery.onionskin.js" | relURL }}" async></script>
 
-<script async src="{{ "/scripts/leader-line.min.js" | relURL }}" ></script>
+<!-- <script async src="{{ "/scripts/leader-line.min.js" | relURL }}" ></script> -->
 
-<!-- <script async src="{{ "/scripts/instantpage.js" | relURL }}" type="module"></script> -->
+<script src="{{ "/scripts/instantpage.js" | relURL }}" type="module" defer></script>
 
 <!-- <script src="{{ "/scripts/instantclick.min.js" | relURL }}" data-no-instant></script>
 <script data-no-instant>InstantClick.init();</script> -->
